feat: implementar tratamento profissional de erros em todos os endpoints
- Implementar ErrorResponseDto padronizado para respostas de erro
- Criar GlobalExceptionHandler centralizado com tratamento específico
- Adicionar exceções customizadas (UserNotFoundException, ProjectNotFoundException, etc.)
- Remover try-catch genéricos substituindo por exceções específicas
- Implementar documentação Swagger completa com exemplos JSON em português
- Adicionar códigos HTTP semânticos (200, 400, 401, 403, 404, 500)
- Atualizar todos os controllers: Auth, Cost, Dashboard, Material, Project, Task, User
- Implementar tratamento para Health Check e Relatórios
- Finalizar módulo Solicitações de Materiais com workflow completo
- Padronizar SecurityRequirement como Bearer Authentication

Resolves: BE12 - Implementar tratamento robusto de erros na API